--- a/Gale_script_0.0.1.Rmd
+++ b/Gale_script_0.0.1.Rmd
@@ -128,7 +128,7 @@ pwd
 
 # Figure 1
 ## make the east coast map
-```{r}
+```{r, warning=F, message=F}
 
 ## making plots for the tradeoffs manuscript
 
@@ -182,7 +182,7 @@ ecmap
 ```
 
 ## make the utah map
-```{r}
+```{r, warning=F, message=F}
 east_coast <- subset(map, region %in% c("utah"))
 
 east_coast$group2 <- east_coast$group
@@ -223,7 +223,7 @@ pwd
 ```
 
 ### taxon plot
-```{r}
+```{r, warning=F, message=F}
 setwd('~/Dropbox/Working Trade-offs/Gale/sequence_results/')
 file_path <- "redo2009m2"
 mapper_file <- "amber_mapper_7_JMC.tsv"
@@ -292,7 +292,7 @@ pwd
 ```
 
 ### orchard taxon plot
-```{r}
+```{r, warning=F, message=F}
 setwd('~/Dropbox/Working Trade-offs/Gale/sequence_results/')
 
 file_path <- "flies_mantel2o2"
@@ -350,7 +350,7 @@ corplot_orchard <- ggplot(orchard_table, aes(x = `k__Bacteria_ p__Proteobacteria
 ```
 
 ### vineyard taxon plot
-```{r}
+```{r, warning=F, message=F}
 file_path <- "flies_mantel2v2"
 mapper_file <- "henrymapper2_JMC.txt"
 map_path = "-henry" # taxonomy folder extension
@@ -420,7 +420,7 @@ pwd
 ```
 
 ### taxon plot
-```{r}
+```{r, warning=F, message=F}
 file_path <- "east_coast_overall3"
 mapper_file <- "mapper_1and2.tsv"
 map_path = "-ec1and2" # taxonomy folder extension
@@ -451,15 +451,12 @@ ptp[[1]][1507,c("Count","twovar","site")] = c(0,rep(1,2))
 ptp[[1]][1506,c("Count","twovar","site")] = c(0,rep(2,2))
 ptp[[1]][1505,c("Count","twovar","site")] = c(0,rep(3,2))
 
-factor(ptp[[1]]$site, levels = rev(c("Etna, ME","Bowdoin, ME","Durham, NH","Harvard, MA","Middlefield, CT","1","Media, PA", "Churchville, MD","4","2","3")))
-
 base_plot <- make_taxon_plot_condensed(ptp = ptp, plot_color = plot_color, facet_formula = facet_formula, sort_x_axis = sort_x_axis, x_cluster = x_cluster, plotvarnames = plotvarnames, legend_position = legend_position, read_depth = read_depth, plot_order = plot_order, relevel_col = "site", relevel_vec = rev(c("Etna, ME","Bowdoin, ME","Durham, NH","Harvard, MA","Middlefield, CT","1","Media, PA", "Churchville, MD","4","2","3")), xorder = xorder, default_colors = T, default_order = F, predefined_taxa = predefined_taxa, predefined_shortname = predefined_shortname, predefined_colors = predefined_colors, order_numbers = order_numbers)
 ec2021 <- base_plot + 
   facet_grid(rows = vars(site), drop = FALSE, as.table = FALSE, scales = "free", space = "free") + 
   theme(strip.text.y = element_blank(), axis.text.y = element_blank(), axis.title.y = element_blank(), legend.position = "none") + 
   coord_flip() + 
   labs(x = "Sample", y = "Fractional abundance")
-
 
 ec2021 + theme(strip.text.y = element_text())
 
@@ -483,7 +480,7 @@ pwd
 ```
 
 ### taxon plot
-```{r}
+```{r, warning=F, message=F}
 file_path <- "utah_mantel500S"
 mapper_file <- "mapper_file_JMCv3_edit.tsv"
 map_path = "-utflies2021" # taxonomy folder extension
@@ -543,7 +540,7 @@ pwd
 ```
 
 ### just temp
-```{r}
+```{r, warning=F, message=F}
 
 setwd('~/Dropbox/Working Trade-offs/Gale/sequence_results/')
 point_size = 0.1
@@ -662,7 +659,7 @@ wget -O taxonomy-DEST/taxonomy_forR.csv https://raw.githubusercontent.com/johnch
 ```
 
 ### Europe and USA Mantel tests
-```{r}
+```{r, warning=F, message=F}
 ## test each individual (table S3)
 
 # j= "desteuropea"; mapper_file = "DESTEuropeMetadata.txt"
@@ -688,7 +685,7 @@ europetempplot <- mantel_distance_plot(europetemp, y_title = "Microbiota distanc
 ```
 
 ## europe and usa map
-```{r}
+```{r, warning=F, message=F}
 mapper3b <- readr::read_tsv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/DESTmapper_v3b.txt", show_col_types = F, comment = "") %>% dplyr::rename(X.SampleID=`#SampleID`)
 
 map2 <- map_data("world")
@@ -717,7 +714,7 @@ usamap
 ```
 
 ## Europe taxon plot
-```{r}
+```{r, warning=F, message=F}
 
 file_path = "desteuropea"
 map_path = "-DEST" # taxonomy folder extension
@@ -748,7 +745,7 @@ europe_plot
 ```
 
 ## USA
-```{r}
+```{r, warning=F, message=F}
 file_path <- "destusa"
 map_path = "-DEST" # taxonomy folder extension
 plotvarnames = c("State","LocalityID") 
@@ -780,7 +777,7 @@ usa_plot
 
 
 ## Table S3
-```{r}
+```{r, warning=F, message=F, eval = F}
 
 setwd('~/Dropbox/Working Trade-offs/Gale/sequence_results/')
 point_size = 0.1
@@ -812,7 +809,7 @@ for(i in c("MaxTemp","MinTemp","AvgTemp","MaxcDHI","AvgcDHI","MaxcDNI","AvgcDNI"
 ```
 
 ## Temperature
-```{r}
+```{r, warning=F, message=F}
 temp_data <- readr::read_tsv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/readin5_temperature.txt", show_col_types = F) %>%
   dplyr::select(-experiment, sample_type) %>%
   mutate(Genotype = as.factor(Genotype),
@@ -1014,7 +1011,7 @@ vegan::adonis2(formula = as.formula(paste0("flies_prerarefied_dm ", formula)), d
 ```
 
 ## Photoperiod
-```{r}
+```{r, warning=F, message=F}
 
 phot_data <- readr::read_csv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/readin5_photoperiod.csv", show_col_types = F) %>% 
  dplyr::select(-`...1`, experiment, sample_type) %>%
@@ -1230,7 +1227,7 @@ bc_analysis("phot24m", paste0("cfu_mapper_",filename,".tsv"), "~ Genotype * Trea
 ```
 
 ## Overall figure
-```{r}
+```{r, warning=F, message=F}
 #points_data <- read_xlsx('~/Dropbox/east_coast_flies_manuscript/megamap_latlong.xlsx', sheet = "Sheet7")
 points_data <- readr::read_csv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/megamap_latlong_sheet7.csv", show_col_types = F) 
 
@@ -1297,7 +1294,7 @@ grid.arrange(ecmap + labs(tag = "A") + theme(plot.tag = element_text(face = "bol
 ```
 
 ## Figure S2 - UU and WU mantel results
-```{r}
+```{r, warning=F, message=F}
 #jpeg(h=8*.875*1.5, w=28*.875*.75, "~/Dropbox/east_coast_flies_manuscript/Figure1_sep2024c_supp.jpg", units = "in", res=300)
 grid.arrange(pamberlat_WU + theme(text = element_text(size=mantel_size*1.15), axis.text = element_text(size=mantel_size)) + labs(x = "Env. distance\n (latitude (°))", y = "Microbiota distance", tag = "A")+ theme(plot.tag = element_text(face = "bold", size = fig1tagsize), plot.title = element_text(color = "blue", size = mantel_size * 1.15)),   
              pamber3_WU+ theme(text = element_text(size=mantel_size*1.15), axis.text = element_text(size=mantel_size)) + labs(x = "Env. distance\n (temperature (°C))", y = "Microbiota distance", tag = "E")+ theme(plot.tag = element_text(face = "bold", size = fig1tagsize), plot.title = element_text(color = "black", size = mantel_size * 1.15)),
@@ -1329,7 +1326,7 @@ grid.arrange(pamberlat_WU + theme(text = element_text(size=mantel_size*1.15), ax
 ```
 
 ## Figure S1 - Utah flies figure
-```{r}
+```{r, warning=F, message=F}
 plot_ut_legend <- g_legend(ut2020 + theme(legend.position = "bottom", legend.text = element_text(size = 12), legend.title = element_blank()) + guides(fill=guide_legend(ncol=5,byrow=TRUE)))
 plot(plot_ut_legend)
 utpoints <- ggplot(points_data %>% filter(plot=="utah"), aes(x = column, y = row, shape = symbol)) +   geom_point(size = 2) + scale_shape_identity() +   theme_cowplot() + theme(legend.position = "none")+   xlim(c(0.88,1.12)) + ylim(c(3.8,8.3))
@@ -1353,7 +1350,7 @@ utpoints <- ggplot(points_data %>% filter(plot=="utah"), aes(x = column, y = row
 ```
 
 ## Figure S5 - correlations figure
-```{r}
+```{r, warning=F, message=F}
 annotationsize = 2
 cortest_amber
 
@@ -1379,7 +1376,7 @@ cortest_amber
 
 # Figure 2
 ## Determine which samples go with each other
-```{r}
+```{r, warning=F, message=F}
 #reference_table <- read.table('~/Dropbox/sequencing/2022-08-ECrun1and2/mapper_1and2_WendyJMC.tsv', fill = T, sep = "\t", comment.char = "", header=T) %>% filter(totalreads_noW > 500, numericsubsite!="<NA>")
 reference_table <- readr::read_tsv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/mapper_1and2_WendyJMC.tsv",skip = 0) %>% filter(totalreads_noW > 500, numericsubsite!="<NA>")
 ```
@@ -1460,7 +1457,7 @@ pwd
 
 
 ## Mantel tests
-```{r}
+```{r, warning=F, message=F}
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 mantel_2groups_all3("mantel_starved_fruit_S","mantel_starved_fruit_F",mapper_file) # nonew
 mantel_2groups_all3("mantel_starved_unstarved_S","mantel_starved_unstarved_U",mapper_file) # UW = 0.046
@@ -1471,7 +1468,7 @@ mantel_2groups_all3("mantel_fruit_soil_F","mantel_fruit_soil_S",mapper_file) # n
 ```
 
 ## ancom
-```{r}
+```{r, warning=F, message=F}
 taxonomic_level = "X.OTU.ID"
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 map_path <- "-ec1and2"
@@ -1583,7 +1580,7 @@ tabulate_individual_venns <- function(file_path = file_path, taxonomic_level = t
 ```
 
 ## Venn diagrams
-```{r}
+```{r, warning=F, message=F}
 map_path = "-ec1and2"
 otu_table = reference_table
 var1 = "plotorder"
@@ -1638,7 +1635,7 @@ wilcox.test(venns_starved_fruit2 %>% pull(perc2), venns_unstarved_fruit2 %>% pul
 ```
 
 ### Venn diagram table
-```{r}
+```{r, warning=F, message=F}
 all_starved_asvs <- get_single_core_features(file_path = "mantel_starved_fruit_S", map_path = map_path, mapper_file = mapper_file, var1 = var1, var2 = var2, var3 = var3, var4 = var4, var5 = NULL, Group = Group, taxonomic_level = "X.OTU.ID") %>%
   mutate(sum = rowSums(across(where(is.numeric)))) %>%
   dplyr::select(clustered_taxonomy, sum)
@@ -1734,7 +1731,7 @@ s2 %>% filter(inFly > 175 | inFruit > 175)
 ```
 
 ## neutral analysis
-```{r}
+```{r, warning=F, message=F}
 taxmat = read.csv('taxonomy-ec1and2/taxonomy_forR.csv')
 rownames(taxmat) <- taxmat$Feature.ID
 taxmat <- taxmat %>% dplyr::select(-Feature.ID)
@@ -1785,7 +1782,7 @@ neutral_plot
 ```
 
 ## map
-```{r}
+```{r, warning=F, message=F}
 east_coast <- subset(map, region %in% c("maine","connecticut","massachusetts","new hampshire","rhode island","vermont","pennsylvania","maryland","district of columbia","delaware","new jersey","new york","virginia"))
 
 east_coast$group2 <- east_coast$group
@@ -1809,7 +1806,7 @@ fruit_map
 ```
 
 ## permanova table
-```{r}
+```{r, warning=F, message=F}
 file_path = "4wayTaxon"
 
   ## unweighted
@@ -1827,7 +1824,7 @@ make_permanova_tables(file_path = file_path, mapper_file = mapper_file, flies_un
 ```
 
 ## taxon plots
-```{r}
+```{r, warning=F, message=F}
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 map_path <- "-ec1and2"
 
@@ -1875,7 +1872,7 @@ taxon_legend <- g_legend(quartet_taxon_plot + theme(legend.position = "bottom")+
 ```
 
 ## distance analysis
-```{r}
+```{r, warning=F, message=F}
 file_path = "4wayTaxon"
 folder_path = "weighted_unifrac"
 var1 = "plotorder"
@@ -1994,7 +1991,7 @@ pwd
 ```
 
 ## Table S7 PERMANOVA
-```{r}
+```{r, warning=F, message=F}
 file_path <- "pile_flies"
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 
@@ -2011,7 +2008,7 @@ make_permanova_tables(file_path = file_path, mapper_file = mapper_file, flies_un
 ```
 
 ## taxon plots
-```{r}
+```{r, warning=F, message=F}
 file_path <- "pile_flies"
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 
@@ -2048,7 +2045,7 @@ compost_plot <- make_taxon_plot_condensed(ptp = ptp, plot_color = plot_color, so
 ```
 
 ## ancom
-```{r}
+```{r, warning=F, message=F}
 
 rm(melted_table, melted_table_no0, mt2)
 var1 = "fp_subsite"
@@ -2082,7 +2079,7 @@ pile_d <- pile_ancoms[[2]] + labs(title = NULL, x = "Site", y = "fractional\nabu
 ```
 
 ## overall figure
-```{r}
+```{r, warning=F, message=F}
 i=2.1
 tagsize=24
 smallsize = 16
@@ -2147,7 +2144,7 @@ pwd
 ```
 
 ### Table S5 (Permanova)
-```{r}
+```{r, warning=F, message=F}
 file_path <- "lymanfruits"
 mapper_file <- "~/Dropbox/sequencing/2022-08-ECrun1and2/mapper_1and2_WendyJMC.tsv"
 
@@ -2168,7 +2165,7 @@ make_permanova_tables(file_path = file_path, mapper_file = mapper_file, flies_un
 ```
 
 ### taxon plot
-```{r}
+```{r, warning=F, message=F}
 file_path <- "lymanfruits"
 mapper_file <- "mapper_1and2_WendyJMC.tsv"
 map_path = "-eastcoast" # taxonomy folder extension
@@ -2209,7 +2206,7 @@ plot(wf_legend)
 ```
 
 ### ancom - no differences with fruittype or subsite
-```{r}
+```{r, warning=F, message=F}
 var1 = "fruittype"
 var2 = "noSubSite"
 var3 = "fruittype"
@@ -2278,7 +2275,7 @@ pwd
 ```
 
 ### Table S6 (permanova)
-```{r}
+```{r, warning=F, message=F}
 file_path <- "gflies"
 mapper_file <- "mapper.tsv"
 
@@ -2295,7 +2292,7 @@ make_permanova_tables(file_path = file_path, mapper_file = mapper_file, flies_un
 ```
 
 ### Taxon plot
-```{r}
+```{r, warning=F, message=F}
 
 # apoc dls4or6= a47c56b57bbcbc2940d672582f8a7249 - 99.59 % # k__Bacteria_ p__Proteobacteria_ c__Alphaproteobacteria_ o__Rhodospirillales_ f__Acetobacteraceae_ g__Acetobacter_ s___a47c56b57bbcbc2940d672582f8a7249
 # atrc dls5 = d5e253f9fd3d9fff16e51560b9ba1add - 100% # k__Bacteria_ p__Proteobacteria_ c__Alphaproteobacteria_ o__Rhodospirillales_ f__Acetobacteraceae_ g__Acetobacter_ s___d5e253f9fd3d9fff16e51560b9ba1add
@@ -2376,7 +2373,7 @@ plot(fv_legend)
 ```
 
 ### ANCOM
-```{r}
+```{r, warning=F, message=F}
 rm(melted_table, melted_table_no0, mt2)
 var1 = "FruitGuess"
 var2 = "Exp"
@@ -2405,7 +2402,7 @@ for (i in "X.OTU.ID") {
 ```
 
 ## overall figure
-```{r}
+```{r, warning=F, message=F}
 i=1.7
 tagsize=40
 smallsize = 22
@@ -2462,7 +2459,7 @@ pwd
 ```
 
 ## Table S8 (PERMANOVA)
-```{r}
+```{r, warning=F, message=F}
 file_path <- "allbutS"
 mapper_file <- "joe_mapper.tsv"
 
@@ -2486,7 +2483,7 @@ make_permanova_tables(file_path = file_path, mapper_file = mapper_file, flies_un
 ```
 
 ## taxon plots
-```{r}
+```{r, warning=F, message=F}
 smallsize = 16
 
 file_path = "allbutS"
@@ -2536,7 +2533,7 @@ lineartime_plot + xlim(c(0,70))
 ```
 
 ## timeline plots
-```{r}
+```{r, warning=F, message=F}
 timeline <- readr::read_tsv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/joe_mapper.tsv", show_col_types = F, ) %>% dplyr::rename('X.SampleID' = `#SampleID`)
 
 file_path <- "allbutS"
@@ -2605,7 +2602,7 @@ joepiles_gantt2
 ```
 
 ## figure SX - mantel tests
-```{r}
+```{r, warning=F, message=F}
 file_path <- "allbutS"
 mapper_file <- "joe_mapper.tsv"
 
@@ -2647,7 +2644,7 @@ grid.arrange(time_UUmantel + labs(tag = "A", y = "Microbiota distance\n(weighted
 ```
 
 ## ancom - used these
-```{r}
+```{r, warning=F, message=F}
 file_path = "allbutS"
 rm(melted_table, melted_table_no0, mt2)
 mapper_file <- "joe_mapper.tsv"
@@ -2842,7 +2839,7 @@ cor.test(peachtime_cortest_glucono$Group, peachtime_cortest_glucono$mean, method
 ```
 
 ### overall figure
-```{r}
+```{r, warning=F, message=F}
 file_path <- "allbutS"
 mapper_file <- "joe_mapper.tsv"
 
@@ -2915,7 +2912,7 @@ c(rep(14,15))
 
 # Figure 5
 # Development panel B
-```{r}
+```{r, warning=F, message=F}
 
 dev_r1 <- readr::read_csv(file = "https://raw.githubusercontent.com/johnchaston/Gale2024/main/dev_r1.csv", show_col_types = F) %>% dplyr::select(-`...1`)
 
@@ -3007,7 +3004,7 @@ bfs <- plot(survfit(S~treatment, dev_filtered_bf), lwd=3, col=c("black","black",
 legend(x=10, y=1, c("Rudman At-inoculated","Rudman Lb-inoculated"), col=c("black","black","black"), lty= c(1,2),lwd=3, bty = "n")
 ```
 
-```{r}
+```{r, warning=F, message=F}
 permanova_name = "conant"
 bc_analysis("conant_test1", paste0("cfu_mapper_",permanova_name,".tsv"), "~ Treatment * Sex + exp", permutations = 1000)
 bc_analysis("conant_test1", paste0("cfu_mapper_",permanova_name,".tsv"), "~ source/Treatment * Sex + exp", permutations = 1000)
@@ -3042,7 +3039,7 @@ grid.arrange(cfu1 + labs(tag = "A") + scale_x_discrete(labels = c("Apple","Compo
 # Supporting analyses
 ## lyman fruits
 ### taxon plot
-```{r}
+```{r, warning=F, message=F}
 
 file_path <- "lymanfruits"
 mapper_file <- "~/Dropbox/sequencing/2022-08-ECrun1and2/mapper_1and2_WendyJMC.tsv"
@@ -3100,7 +3097,7 @@ wild_fruits_wolb
 ```
 
 ### ANCOM
-```{r}
+```{r, warning=F, message=F}
 
 ###
 # ANCOM
@@ -3179,7 +3176,7 @@ lyman_ancomplot_ASV
 ```
 
 ## overall figure
-```{r}
+```{r, warning=F, message=F}
 
 getwd()
 i=1.7
